fix(leads): width of dream cards container on mobile

--- a/scss/index.css
+++ b/scss/index.css
@@ -630,7 +630,8 @@ html {
 }
 @media (max-width: 700px) {
   .leads__dream-cards {
-    overflow: hidden;
+    margin-inline: 20px;
+    overflow-x: auto;
     display: flex;
   }
 }
