--- a/scss/sections/_leads.scss
+++ b/scss/sections/_leads.scss
@@ -56,7 +56,8 @@
         }
 
         @include max(700px) {
-            overflow: hidden;
+            margin-inline: 20px;
+            overflow-x: auto;
             display: flex;
         }
     }
